TestHttpServer JDK8 fix